--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     font-weight: 400;
     line-height: 27px;
     background: #F5F8FF;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -45,6 +46,33 @@ body *::selection {
     color: #F5F6FB;
 }
 
+@keyframes eclipse{   
+  0% {     
+    transform: rotate(0deg) translate(0%, 0%);
+  }
+  12% {     
+    transform: rotate(-60deg) translate(10%, -10%);
+  }   
+  25% {     
+    transform: rotate(-120deg) translate(5%, 10%);
+  }
+  50% {     
+    transform: rotate(-180deg) translate(10%, 15%);
+  }
+  62% {   
+    transform: rotate(-240deg) translate(15%, 10%);
+  }
+  75% {
+    transform: rotate(-300deg) translate(0%, 0%);
+  }
+  88% { 
+    transform: rotate(-360deg) translate(5%, 0%);
+  }
+  100% {     
+    transform: rotate(-360deg) translate(5%, 10%);
+  }
+}
+
 /* DEFAULT STYLES */
 
 span.color__text {
@@ -57,6 +85,7 @@ span.color__text {
     line-height: 116%;
     text-align: center;
     color: #2468B7;
+    z-index: 999;
 }
 
 .block__description {
@@ -70,11 +99,13 @@ span.color__text {
 /* MAIN STYLES */
 
 header.header {
-    display: flex;
+    display: none;
     justify-content: center;
     position: absolute;
     width: 100%;
     z-index: 99999;
+    transition: all .5s linear;
+    opacity: 0;
 }
 
 .header__wrapper {
@@ -125,10 +156,10 @@ header.header {
 }
 
 .nav__link:after {
-    background-color: #2468C5; /* Цвет линии при наведении на нее курсора мыши */
+    background-color: #2468C5; /* Ð¦Ð²ÐµÑ‚ Ð»Ð¸Ð½Ð¸Ð¸ Ð¿Ñ€Ð¸ Ð½Ð°Ð²ÐµÐ´ÐµÐ½Ð¸Ð¸ Ð½Ð° Ð½ÐµÐµ ÐºÑƒÑ€ÑÐ¾Ñ€Ð° Ð¼Ñ‹ÑˆÐ¸ */
     display: block;
     content: "";
-    height: 1px; /* Высота линии */
+    height: 1px; /* Ð’Ñ‹ÑÐ¾Ñ‚Ð° Ð»Ð¸Ð½Ð¸Ð¸ */
     width: 0%;
     -webkit-transition: width .3s ease-in-out;
     -moz--transition: width .3s ease-in-out;
@@ -165,23 +196,26 @@ header.header {
     display: flex;
     justify-content: center;
     position: relative;
-    background: url(../img/header__bg.svg) no-repeat center 49px;
+    background: none;
     padding-top: 115px;
     height: 906px;
     background-color: #fff;
+    overflow: hidden;
 }
 
 .post__header__wrapper {
     max-width: 1350px;
     width: 100%;
     display: flex;
-    background: url(../img/header_man.png) no-repeat center right;
     position: relative;
 }
 
 .top__slider-wrapper {
     max-width: 660px;
     padding: 176px 0 0 0;
+    opacity: 0;
+    transition: all .5s linear;
+    z-index: 5;
 }
 
 h2.item__title {
@@ -198,6 +232,21 @@ h2.item__title {
     margin-top: 30px;
     max-width: 525px;
     color: #656565;
+}
+
+.lines__wrapper {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.ceo__info {
+    z-index: 9;
+    transition: all .5s linear;
+    opacity: 0;
 }
 
 .ceo__info__text {
@@ -219,6 +268,22 @@ h2.item__title {
     font-weight: 600;
     font-size: 18px;
     line-height: 150%;
+}
+
+.header__man {
+    position: absolute;
+    left: 100%;
+    transform: translateX(-100%);
+    z-index: 4;
+    opacity: 0;
+    transition: all .5s linear;
+}
+
+.main {
+    position: relative;
+    z-index: 9;
+    opacity: 0;
+    transition: all .5s linear;
 }
 
 .header__form {
@@ -324,6 +389,16 @@ span.sale {
     justify-content: center;
     margin-top: 50px;
     background: url(../img/process__bg.svg) no-repeat center 80px;
+    position: relative;
+}
+
+.porcess__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #f5f8ff;
+    transition: all 2.5s linear;
+    z-index: 99;
 }
 
 .process__video {
@@ -336,6 +411,7 @@ span.sale {
     align-items: center;
     margin-top: 150px;
     padding-bottom: 45px;
+    transition: all .5s ease;
 }
 
 .faq__items {
@@ -434,6 +510,17 @@ span.sale {
     padding-bottom: 358px;
     display: flex;
     justify-content: center;
+    position: relative;
+}
+
+.adv__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: #fff;
+    max-height: 500px;
+    transition: all 2.5s linear;
 }
 
 .advantages__wrapper {
@@ -790,9 +877,18 @@ span.sale {
     padding-bottom: 150px;
 }
 
+.about .h2__title {
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
+}
+
 .about .block__description {
     margin: 30px 0 68px 0;
     max-width: 1095px;
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
 }
 
 .about__info {
@@ -801,6 +897,9 @@ span.sale {
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
 }
 
 .about__img {
@@ -850,16 +949,24 @@ span.sale {
     align-items: center;
 }
 
+.doctors .h2__title {
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
+}
+
 .doctors .block__description {
     font-size: 16px;
     max-width: 835px;
     margin: 30px 0 45px 0;
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
 }
 
 .doctors__gallery {
     max-width: 1350px;
     position: relative;
-    background: url(../img/doctors__bg.svg) no-repeat center 50px;
     background-color: #929DBA;
     border-radius: 20px;
     padding: 55px 40px 40px 40px;
@@ -867,6 +974,19 @@ span.sale {
     height: 620px;
     width: 100%;
     overflow: hidden;
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
+}
+
+.overline {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0%;
+    height: 100%;
+    overflow: hidden;
+    transition: all .5s linear;
 }
 
 .doctor__info {
@@ -909,6 +1029,10 @@ span.sale {
     overflow: hidden;
 }
 
+.doctor__photo img {
+    max-width: 650px;
+}
+
 .doctor__profile {
     max-width: 395px;
     width: 100%;
@@ -946,7 +1070,9 @@ span.sale {
     -ms-transition: all .5s ease;
     -o-transition: all .5s ease;
 }
-
+.doctor__item.active {
+    transform: translateY(-30%);
+}
 .doctor__item:nth-child(14) {
     margin-right: 0;
 }
@@ -963,6 +1089,21 @@ span.sale {
     justify-content: center;
     align-items: center;
     padding-bottom: 75px;
+    position: relative;
+}
+
+.rating .h2__title {
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
+}
+
+.rating__overlay {
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    background: #f5f8ff;
+    transition: all 2s linear;
 }
 
 .rating__wrapper {
@@ -973,6 +1114,10 @@ span.sale {
     justify-content: space-between;
     align-items: center;
     margin-top: 70px;
+    z-index: 9;
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
 }
 
 .rating__content {
@@ -1034,6 +1179,7 @@ span.play__btn {
     display: flex;
     align-items: center;
     margin-top: 35px;
+    z-index: 9;
 }
 
 .rating__pagination .arrow__prev.slider__arrow {
@@ -1088,11 +1234,20 @@ span.play__btn {
     align-items: center;
 }
 
+.contacts .h2__title {
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
+}
+
 .contacts__wrapper {
     margin-top: 45px;
     max-width: 1350px;
     width: 100%;
     display: flex;
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
 }
 
 .address {
@@ -1102,11 +1257,17 @@ span.play__btn {
 
 .top__contacts {
     display: flex;
+    flex-direction: column;
 }
 
 .contacts__left {
-    max-width: 50%;
+    max-width: 100%;
     width: 100%;
+}
+
+.contacts__left ul {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 span.contact__title {
@@ -1116,37 +1277,51 @@ span.contact__title {
     color: #232323;
     margin-bottom: 7px;
     display: block;
-    max-width: 200px;
+    /* max-width: 330px; */
+    /* width: 100%; */
+    /* display: block; */
 }
 
 .contacts__left ul li {
     list-style: none;
 }
 
-a.address__link {
+.address__link {
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     text-decoration-line: none;
     color: #232323;
     padding-bottom: 1px;
-    border-bottom: 1px solid #23232330;
+    /* border-bottom: 1px solid #23232330; */
     transition: all .5s ease;
     -webkit-transition: all .5s ease;
     -moz-transition: all .5s ease;
     -ms-transition: all .5s ease;
     -o-transition: all .5s ease;
+    max-width: 50%;
+    /* margin: 10px 20px 10px 0; */
+    padding: 0 20px 10px 0;
+    width: 100%;
 }
 
-a.address__link:hover {
-    border-bottom: 1px solid #232323;
+.address__link:last-child {
+    /* margin: 10px 0 0; */
+    /* padding-bottom: 0; */
+    /* border-bottom: none; */
 }
 
 .contacts__right {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     justify-content: space-between;
+    max-width: 100%;
+    width: 100%;
+}
+
+.work__hour,
+.work__phone{
     max-width: 50%;
     width: 100%;
 }
@@ -1185,6 +1360,7 @@ a.address__link:hover {
     flex-direction: column;
     align-items: center;
     padding: 30px;
+    justify-content: center;
 }
 
 .contacts__form__title {
@@ -1263,6 +1439,7 @@ footer.footer {
 
 .process__implant {
     margin-top: 30px;
+    z-index: 999;
 }
 
 .video__wrapper {
@@ -1415,6 +1592,9 @@ span.twentytwenty-right-arrow {
     flex-direction: column;
     width: 100%;
     align-items: center;
+    opacity: 0;
+    transition: all 2s ease;
+    transform: translateY(100px);
 }
 .doctors__mob__wrapper {
     max-width: 460px;
@@ -1461,9 +1641,12 @@ span.twentytwenty-right-arrow {
     width: 100%;
     bottom: 0px;
     /* z-index: 9999; */
+    text-align: center;
+    justify-content: center;
+    display: flex;
 }
 .doctor__mob__photo img {
-    width: 100%;
+    width: 75%;
 }
 .doctors__mob__arrows {
     width: 100%;
@@ -1641,4 +1824,54 @@ span.load__text {
 .top__slider__dots ul li.slick-active button {
     color: #2468B7;
     background: #2468B7;
+}
+
+.left__line__active,
+.right__line__active {
+    position: absolute;
+    bottom: 0;
+    overflow: hidden;
+    width: 100%;
+    transition: all .5s linear;
+    padding-right: 0;
+}
+
+.left__line__active {
+    left: 0;
+    max-width: 826px;
+}
+
+.left__line__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    transition: all .5s linear;
+}
+
+.rigth__line__active__wrapper {
+    overflow: hidden;
+    width: 0%;
+    transition: all .5s linear;
+    max-width: 393px;
+}
+
+.right__line__active {
+    width: 100%;
+    max-width: 393px;
+    right: 0;
+    bottom: 40px;
+    z-index: 3;
+}
+
+.eclipse {
+    position: absolute;
+    left: 25%;
+    transition: all .5s linear;
+}
+
+.eclipse {
+    animation: eclipse 50s linear infinite;
+    z-index: 1;
+    opacity: 0;
 }
