--- a/css/style.css
+++ b/css/style.css
@@ -642,7 +642,7 @@ span.sale {
     max-width: 1350px;
     width: 100%;
     padding: 44px 35px;
-    background: url(../img/content__form__bg.jpg) no-repeat center left;
+    background: url(../img/content__form__bg1.jpg) no-repeat center left;
     background-color: #2468c5;
     border-radius: 20px;
     display: flex;
