--- a/css/media.css
+++ b/css/media.css
@@ -334,7 +334,7 @@
        max-width: 1170px;
        width: 100%;
        padding: 33px 45px;
-       background: url(../img/content__form__bg.jpg) no-repeat center left;
+       background: url(../img/content__form__bg1.jpg) no-repeat center left;
        background-color: #2468c5;
        background-size: 843px;
    }
@@ -1156,7 +1156,7 @@
    max-width: 938px;
    width: 100%;
    padding: 31px 35px;
-   background: url(../img/content__form__bg.jpg) no-repeat center left;
+   background: url(../img/content__form__bg1.jpg) no-repeat center left;
    background-color: #2468c5;
    background-size: 80%;
    }
@@ -2024,7 +2024,7 @@
    max-width: 700px;
    width: 100%;
    padding: 31px 23px;
-   background: url(../img/content__form__bg.jpg) no-repeat -60px center;
+   background: url(../img/content__form__bg1.jpg) no-repeat -60px center;
    background-color: #2468c5;
    background-size: 98%;
    }
