--- a/css/media.css
+++ b/css/media.css
@@ -3039,7 +3039,7 @@
    max-width: 460px;
    width: 100%;
    padding: 290px 30px 22px 30px;
-   background: url(../img/mobile__form.jpg) no-repeat center top;
+   background: url(../img/content__form__bg1.jpg) no-repeat center top;
    background-color: #2468c5;
    background-size: 100%;
    transform: translateY(0);
